--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,13 +17,13 @@ on:
     paths:
       - aries-cloud-agent-python/**
 jobs:
-  demo:
-    runs-on: ubuntu-latest
+  watch-demo:
+    runs-on: ubuntu-18.04
+    name: Demo
     steps:
       - uses: actions/checkout@v2
-
-    # Watch for changes to the HEAD ref, use
-    # git for cache keys.
-    - name: Generate cache key
+      # Watch for changes to the HEAD ref, use
+      # git for cache keys.
+      - name: Generate cache key
         run: |
           echo $(git rev-parse HEAD:aries-cloudagent-python/demo) > ./dd-cache-key.txt
