--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,6 +22,11 @@ jobs:
     name: Demo
     steps:
       - uses: actions/checkout@v2
+      
+      - name: Pull & update submodules recursively
+        run: |
+          git submodule update --init --recursive
+          
       # Watch for changes to the HEAD ref, use
       # git for cache keys.
       - name: Generate cache key
